css/main.css
@import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css');

body {
	font-family: Arial, sans-serif;
	line-height: 1.6;
	margin: 0;
	padding: 0;
	background-color: #f4f4f4;
}

html,
body {
	height: 100%;
	overflow: hidden;
}

#about {
	padding: 20px;
	background-color: rgba(255, 255, 255, 1);
	margin: 20px auto;
	max-width: 90%;
	box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
	border-radius: 10px;
}

#buttons {
	text-align: center;
	margin: 20px auto;
	max-width: 100%;
}

.button {
	width: 400px;
	display: inline-block;
	padding: 10px 20px;
	margin: 5px;
	background-color: #302c4e;
	color: #fff;
	text-decoration: none;
	border: 2px solid #000;
	border-radius: 0;
	font-family: "Minecraft", sans-serif;
	font-size: 16px;
	transition: background-color 0.3s ease, transform 0.1s ease;
	box-shadow: 2px 2px 0 #000, 4px 4px 0 #1a182b;
	max-width: 85%;
}

.button p {
	display: inline;
}

.button:hover {
	background-color: #24213b;
	box-shadow: inset 2px 2px 0 #000, inset 4px 4px 0 #1a182b;
	text-decoration: none !important;
}

@keyframes fadeIn {
	0% {
		opacity: 0;
	}
	100% {
		opacity: 1;
	}
}

#expansion:hover {
	position: relative;
}

#expansion::after {
	content: "Coming Soon";
	position: absolute;
	top: 50%;
	left: 50%;
	transform: translate(-50%, -50%);
	background-color: rgba(0, 0, 0, 0.7);
	color: #fff;
	padding: 10px 20px;
	border-radius: 5px;
	font-size: 18px;
	font-family: Arial, sans-serif;
	white-space: nowrap;
	opacity: 0;
	pointer-events: none;
}

#expansion:hover::after {
	animation: fadeIn 0.5s forwards;
}

#content {
	font-family: Arial, sans-serif;
	background-color: rgba(155, 155, 155, 0.3);
	border-radius: 10px;
	margin: 0;
	padding: 60px 20px 60px 20px; /* Add padding to the top and bottom */
	display: flex;
	flex-direction: column;
	margin: auto;
	width: 50%;
	text-align: center;
	min-width: 335px;
}

#mainScroller {
	width: 100%;
	height: 100%;
	overflow: auto;
	padding: 0;
	margin: 0;
}

footer {
	bottom: 0;
	position: fixed; /* Change to fixed */
	width: 100%;
}

header {
	top: 0;
	position: fixed; /* Change to fixed */
	width: 100%;
}

embed {
	width: 100%;
	padding: 0;
}

a {
	color: #333;
	text-decoration: none;
	font-weight: bold;
}

a:hover {
	text-decoration: underline;
}

embed.header {
	height: 50px;
}

embed.footer {
	position: absolute;
	bottom: 0;
}

body {
	backdrop-filter: blur(6px);
	background-repeat: no-repeat;
	background-size: cover;
}

.bg1 {
	background-image: url("/assets/images/bg1.webp");
}
.bg2 {
	background-image: url("/assets/images/bg2.webp");
}

.bg3 {
	background-image: url("/assets/images/bg3.webp");
}

.bg4 {
	background-image: url("/assets/images/bg4.webp");
}

#videoEmbed {
	max-width: 90%;
	aspect-ratio: 16 / 9;
	height: auto;
}

.banner {
    background-size: cover;
    background-position: center;
    transition: background 0.5s ease, background-color 0.5s ease;
    position: relative;
}

.banner::before {
    content: "";
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    background: rgba(0, 0, 0, 0);
    transition: background 0.5s ease;
    z-index: 0;
}

.banner:hover::before {
    background: rgba(0, 0, 0, 0.4);
}

.banner i,
.banner p {
    position: relative;
    z-index: 1;
}

.banner:hover {
    background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3));
    background-size: cover;
    background-position: center;
    background-position-y: top;
}

#download {
    background-image: url(/assets/images/botwDownload.webp);
}

#discord {
    background-image: url(/assets/images/discordBanner.webp);
}
#faq-section {
    max-width: 800px;
    margin: 20px auto;
    padding: 20px;
    background-color: rgba(255, 255, 255, 0.9);
    border-radius: 10px;
    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
}

#faq-section h1 {
    text-align: center;
    margin-bottom: 20px;
}

.faq-item {
    margin-bottom: 20px;
}

.faq-item h2 {
    font-size: 1.2em;
    margin-bottom: 10px;
}

.faq-item p {
    font-size: 1em;
    margin: 0;
}

.faq-item a {
    text-decoration: underline;
}

.collapsible {
    background-color: #777;
    color: white;
    cursor: pointer;
    padding: 10px;
    width: 100%;
    border: none;
    text-align: left;
    outline: none;
    font-size: 15px;
    transition: background-color 0.3s ease;
}

.active, .collapsible:hover {
    background-color: #555;
}

.content {
    padding: 0 18px;
    max-height: 0;
    overflow: hidden;
    background-color: #f1f1f1;
    transition: max-height 0.3s ease, padding 0.3s ease;
}

video {
    max-width: 100%;
    max-height: 100vh;
}

